--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "matter-js": "^0.19.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
