--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "gsap": "^3.12.2",
     "matter-js": "^0.19.0",
     "next": "13.4.13",
     "react": "18.2.0",
