--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "sharp": "^0.32.5",
     "typescript": "5.1.6"
   },
   "devDependencies": {
